Created header on landing page, add fonts

--- a/src/index.pug
+++ b/src/index.pug
@@ -4,8 +4,5 @@ doctype html
 html(lang="en")
 	include pug/_head
 	body
-		.container Webpack 
-
-		.container__sub Lorem ipsum 
-		+image('angular')
-		+image('webpack')
+		include pug/header
+		
