--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,4 +1,8 @@
 @font-face {
-	font-family: generalFont;
-	src: url('../fonts/Prompt-Regular.ttf') format('truetype');
+	font-family: Marcellius;
+	src: url('../fonts/Marcellus-Regular.ttf');
+}
+@font-face {
+	font-family: Mulish;
+	src: url('../fonts/Mulish-VariableFont_wght.ttf');
 }
