--- a/src/pug/libs/_images.pug
+++ b/src/pug/libs/_images.pug
@@ -1,3 +1,3 @@
-mixin image(name)
-	img(src=require(`../src/images/${name}.png`), alt=name)
+mixin image(name,type)
+	img(src=require(`../src/images/${name}.${type}`), alt=name)
 	
