--- a/src/index.pug
+++ b/src/index.pug
@@ -1,8 +1,9 @@
-include pug/libs/_libs
+//- include pug/libs/_libs
 
 doctype html
 html(lang="en")
 	include pug/_head
 	body
 		include pug/header
+		include pug/banner
 		
