--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,6 @@
 $white: #fff;
-
+$bg-gradient: linear-gradient(316.53deg, #26FFF2 13.2%, #326CFF 71.54%);
+$bg-gradient-safe: rgb(50,108,255);
 
 
 html{
@@ -13,4 +14,17 @@ body{
 	font-size: 16px;
 	font-family: Mulish;
 	
+}
+
+button{
+	&:focus{
+		outline: none;
+	}
+}
+
+.container{
+	max-width: 144rem;
+	padding-left: 1.5rem;
+	padding-right: 1.5rem;
+	margin: 0 auto;
 }
