--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,4 +1,4 @@
-$white: #fff;
+@import 'global';
 
 .header{
 	display: flex;
@@ -23,30 +23,38 @@ $white: #fff;
 	padding-left: 0;
 
 	&-item{
-		margin: 0 1.5rem;
+		margin: 0 2.5rem;
 
 	}
 	&-link{
 		text-decoration: none;
 		font-weight: 700;
 		color: rgba($white, 0.5);
+		transition: 0.2s ease color;
+
+		&:hover{
+		color: rgba($white, 1);
+
+		}	
+
 		&::after{
 			opacity: 0;
 			content: "";
 			display: block;
 			width: 100%;
 			height: 0.2rem;
-			background: linear-gradient(316.53deg, #26FFF2 13.2%, #326CFF 71.54%);
 			border-radius: 50px;
+			background: $bg-gradient-safe;
+			background: $bg-gradient;
 			margin-top: .5rem;
 		}
 
 		&.active{
 			color: rgba($white, 1);
 
-		&::after{
-			opacity: 1;
-		}
+			&::after{
+				opacity: 1;
+			}
 		}
 	}
 }
