create two content sections, footer

--- a/src/pug/content.pug
+++ b/src/pug/content.pug
@@ -37,3 +37,25 @@ section.section
 			+genres-item('horror')(class="genres-item_horror")
 			+genres-item('comedy')(class="genres-item_comedy")
 			+genres-item('documentary')(class="genres-item_documentary")
+section.section
+	.container 
+		h2.section__h2 
+			a(href="#").section__h2-link  Popular Actors & Directors
+		.actors
+			+actors-item(2, 'Samantha Bowen')
+			+actors-item(2, 'Samantha Bowen')
+			+actors-item(2, 'Samantha Bowen')
+			+actors-item(2, 'Samantha Bowen')
+			+actors-item(2, 'Samantha Bowen')
+			+actors-item(2, 'Samantha Bowen')
+section.section
+	.container 
+		.marketing 
+			+marketing-item(1)
+			+marketing-item(2)
+section.section
+	.container 
+		.offer 	
+			h2.offer__title Are You New Here ? Don’t&nbsp; wait, Register Now. 
+			button.offer__btn Register Now
+			
