--- a/src/pug/header.pug
+++ b/src/pug/header.pug
@@ -23,3 +23,7 @@ header
 				button.control-btn.control-btn_bell 
 			li.control-item 
 				button.control-btn.control-btn_account 
+		button.burger
+			span.burger__item
+			span.burger__item
+			span.burger__item
