--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 // @use 'global';
+@use 'normalize';
 @use 'fonts';
 @use 'header';
-@use 'normalize';
 @use 'banner';
 @use 'content';
+@use 'footer';
