--- a/src/pug/banner.pug
+++ b/src/pug/banner.pug
@@ -1,10 +1,9 @@
 include libs/_libs
 
 section.section-banner
-	img(src=require("../src/images/banner.png"), alt="banner").section-banner__image
 	.container 
 		.banner 
-			h1.banner__title Zack Snyder's Justice League
+			h1.banner__title Zack Snyder's Justice&nbsp;League
 			.banner-info
 				span.banner-info__year 2021
 				span.banner-info__age 18+
