--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -10,6 +10,9 @@
 		position: relative;
 		font-weight: 700;
 		display: inline-block;
+		@media (max-width: $r_tab) {
+            font-size: 2.2rem;
+        }
 		&::before{
 			content: "";
 			display: block;
@@ -58,6 +61,9 @@
 		box-shadow: 0px 4px 50px rgba(50, 108, 255, 0.5);
 		transition: .2s ease box-shadow;
 		margin-top: 5.5rem;
+		@media (max-width: $r_mob_600) {
+            margin-top: 2rem;
+        }
 
 		&:hover{
 		box-shadow: 0px 0px 0px rgba(50, 108, 255, 0.5);
@@ -71,12 +77,23 @@
 	align-items: center;
 	justify-content: space-between;
 	margin-top: 2.1rem;
+	@media (max-width: $r_desk) {
+        flex-wrap: wrap;
+    }
 
 	&-item {
         box-shadow: 0px 0px 20px rgba(44, 176, 249, 0.0);
         transition: .2s ease box-shadow;
 		border-radius: 2rem;
 		flex: 0 0 14%;
+		@media (max-width: $r_desk) {
+            flex: 0 0 32%;
+            margin-bottom: 4rem;
+        }
+        @media (max-width: $r_mob_500) {
+            flex: 0 0 48%;
+            margin-bottom: 2rem;
+        }
 		&:hover{
 			box-shadow: 0px 0px 20px rgba(44, 176, 249, 0.5);
 		}
@@ -90,6 +107,15 @@
 		height: 30.9rem;
 		display: block;
 		border-radius: 2rem;
+		@media (max-width: $r_desk_hd) {
+            height: 22rem;
+        }
+        @media (max-width: $r_desk) {
+            height: 31rem;
+        }
+        @media (max-width: $r_mob_600) {
+            height: 22rem;
+        }
 	}
 
 	&__img{
@@ -111,6 +137,9 @@
 	flex-wrap: wrap;
 	text-align: center;
 	margin-top: 2.1rem;
+	@media (max-width: $r_desk) {
+        flex-wrap: wrap;
+    }
 	
 	&-item{
 		flex: 0 0 23.7%; 
@@ -118,6 +147,19 @@
 		padding: 4.8rem 1rem 3.8rem;
 		box-sizing: border-box;
         margin-bottom: 2.7rem;
+		@media (max-width: $r_desk) {
+            flex: 0 0 32%;
+        }
+        @media (max-width: $r_tab) {
+            margin-bottom: 1.5rem;
+        }
+        @media (max-width: $r_mob_600) {
+            flex: 0 0 48.5%;
+            margin-bottom: 1.2rem;
+        }
+        @media (max-width: $r_mob_400) {
+            padding: 2.8rem 1rem 1.8rem;
+        }
 		
 		&_romance{
 			background: linear-gradient(109.31deg, #FD093F 2.4%, #F383F1 100%);
@@ -131,10 +173,16 @@
 
 		&_action{
 			background: linear-gradient(109.31deg, #FD093F 2.4%, #FB1378 2.41%, #FCCB1A 100%);
+			@media (max-width: $r_desk) {
+                flex: 0 0 49%;
+            }
 		}
 
 		&_sci-fi{
 			background: linear-gradient(109.31deg, #FF6472 2.4%, #FDA75D 100%);
+			@media (max-width: $r_desk) {
+                flex: 0 0 49%;
+            }
 		}
 		&_horror{
 			background: linear-gradient(110.16deg, #13547A 2.37%, #80D0C7 96.77%);
@@ -151,6 +199,12 @@
 		height: 8rem;
 		position: relative;
 		overflow: hidden;
+		@media (max-width: $r_tab) {
+            height: 6rem;
+        }
+        @media (max-width: $r_mob_400) {
+            height: 5rem;
+        }
 	}
 	&__image{
 		position: absolute;
@@ -158,6 +212,9 @@
         top: 50%;
         transform: translate(-50%,-50%);
         object-fit: cover;
+		@media (max-width: $r_tab) {
+            height: 100%;
+        }
 
 	}
 
@@ -165,6 +222,185 @@
 		font-size: 2.8rem;
 		font-weight: 700;
 		margin: .2rem 0 0 0;
+		@media (max-width: $r_tab) {
+            font-size: 2rem;
+            margin: .5rem 0 0 0;
+        }
+        @media (max-width: $r_mob_400) {
+            font-size: 1.6rem;
+        }
 
 	}
+}
+
+.actors{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	text-align: center;
+	margin-top: 2.1rem;
+	@media (max-width: $r_desk_hd) {
+        flex-wrap: wrap;
+    }
+	&-item{
+		flex: 0 0 14%;
+		@media (max-width: $r_desk_hd) {
+            flex: 0 0 32%;
+            text-align: center;
+        }
+        @media (max-width: $r_mob_600) {
+            flex: 0 0 49%;
+        }
+
+	}
+
+	&__link{
+		overflow: hidden;
+        position: relative;
+        width: 18rem;
+        height: 18rem;
+        display: block;
+        border-radius: 100%;
+		@media (max-width: $r_desk_hd) {
+            margin: 0 auto;
+        }
+        @media (max-width: $r_tab) {
+            width: 15rem;
+            height: 15rem;
+        }
+        @media (max-width: $r_mob_400) {
+            width: 10rem;
+            height: 10rem;
+        }
+	}
+	&__img{
+		position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%,-50%);
+        object-fit: cover;
+        width: 18rem;
+        height: 18rem;
+		@media (max-width: $r_tab) {
+            width: 15rem;
+            height: 15rem;
+        }
+        @media (max-width: $r_mob_400) {
+            width: 10rem;
+            height: 10rem;
+        }
+	}
+}
+
+.marketing{
+	display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    margin-top: 2.1rem;
+	@media (max-width: $r_desk) {
+        display: none;
+    }
+	&-item{
+		flex: 0 0 50%;
+        border-radius: 2rem;
+
+		&:first-child {
+            .marketing__link {
+                border-radius: 2rem 0 0 2rem;
+            }
+        }
+        &:last-child {
+            .marketing__link {
+                border-radius: 0 2rem 2rem 0;
+            }
+        }
+
+	}
+
+	&__link{
+		overflow: hidden;
+        position: relative;
+        width: 100%;
+        height: 34.1rem;
+        display: block;
+	}
+
+	&__img{
+		position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%,-50%);
+        object-fit: cover;
+	}
+}
+
+.offer{
+	max-width: 122.4rem;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-image: url('../images/offer-bg.png');
+    padding: 7.2rem 14.7rem 7.2rem 5.7rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 2rem;
+    margin-top: 7rem;
+    margin-bottom: 12.1rem;
+    box-sizing: border-box;
+	@media (max-width: $r_desk_hd) {
+        padding: 7.2rem 5.7rem;
+    }
+    @media (max-width: $r_desk) {
+        flex-wrap: wrap;
+        text-align: center;
+        justify-content: center;
+    }
+    @media (max-width: $r_mob_600) {
+        padding: 4rem 3rem;
+        margin-top: 0;
+        margin-bottom: 7rem;
+    }
+	&__title{
+		font-size: 6.4rem;
+        font-weight: 700;
+        max-width: 80rem;
+        margin: 0;
+        line-height: 1;
+        flex-grow: 1;
+        margin-right: 2rem;
+		@media (max-width: $r_desk_hd) {
+            font-size: 5.4rem;
+            margin-right: 12rem;
+        }
+        @media (max-width: $r_desk) {
+            font-size: 4.4rem;
+            margin-right: 0;
+            margin-bottom: 2rem;
+        }
+        @media (max-width: $r_tab) {
+            font-size: 3.4rem;
+        }
+        @media (max-width: $r_mob_600) {
+            font-size: 2.4rem;
+        }
+	}
+
+	&__btn {
+        border: none;
+        border-radius: 10rem;
+        padding: 1.5rem 3rem;
+        font-family: 'Mulish', sans-serif;
+        font-weight: 800;
+        cursor: pointer;
+        background: $bg-gradient-safe;
+        background: $bg-gradient;
+        color: $white;
+        box-shadow: 0px 4px 50px rgba(50, 108, 255, 0.5);
+        transition: .2s ease box-shadow;
+        &:hover {
+            box-shadow: 0px 0px 0px rgba(50, 108, 255, 0.5);
+        }
+    }
 }
