--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -8,12 +8,28 @@
 	padding: 1.5rem;
 	margin: 0 auto;
 
-	>a{
-		background: url(../images/logo.svg);
-		background-repeat: no-repeat;
-		width: 15.7rem;
-		height: 7rem;
-	}
+	// >a{
+	// 	background: url(../images/logo.svg);
+	// 	background-repeat: no-repeat;
+	// 	width: 15.7rem;
+	// 	height: 7rem;
+	// }
+	&-logo {
+        &__img {
+            @media (max-width: $r_desk) {
+                max-width: 120px;
+            }
+            @media (max-width: $r_mob_600) {
+                max-width: 105px;
+            }
+        }
+    }
+}
+
+nav{
+	@media (max-width: 690px) {
+        display: none;
+    }
 }
 
 .nav{
@@ -24,6 +40,9 @@
 
 	&-item{
 		margin: 0 2.5rem;
+		@media (max-width: $r_desk) {
+            margin: 0 1.8rem;
+        }
 
 	}
 	&-link{
@@ -65,11 +84,25 @@
 	align-items: center;
 	list-style: none;
 	padding-left: 0;
+	@media (max-width: $r_mob_360) {
+        display: none;
+    }
 
 
 	&-item{
 		margin-left: 7.5rem;
+		@media (max-width: $r_desk) {
+            margin-left: 4rem;
+        }
+        @media (max-width: $r_mob_600) {
+            margin-left: 3rem;
+        }
+		&:first-child {
+            margin-left: 0;
+        }
 	}
+
+
 
 	&-btn{
 		background-color:transparent;
@@ -96,4 +129,34 @@
 
 
 	}
+}
+
+.burger {
+    display: none;
+    background-color: transparent;
+    border: none;
+    width: 50px;
+    @media (max-width: 690px) {
+        display: block;
+    }
+    @media (max-width: $r_mob_600) {
+        width: 46px;
+    }
+    &__item {
+        display: block;
+        width: 100%;
+        height: 4px;
+        margin-bottom: 8px;
+        background-color: #fff;
+        border-radius: 20px;
+        -webkit-transition: all .2s linear;
+        -o-transition: all .2s linear;
+        transition: all .2s linear;
+        @media (max-width: $r_mob_600) {
+            height: 2px;
+        }
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
 }
